k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solar-analysis-staging
  labels:
    name: solar-analysis-staging
    environment: staging
